WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
191479
[MediaStream] AVVideoCaptureSource reports incorrect size when frames are scaled
https://bugs.webkit.org/show_bug.cgi?id=191479
Summary
[MediaStream] AVVideoCaptureSource reports incorrect size when frames are scaled
Eric Carlson
Reported
2018-11-09 12:12:08 PST
AVVideoCaptureSource reports incorrect size when frames are scaled
Attachments
Patch
(6.45 KB, patch)
2018-11-09 12:25 PST
,
Eric Carlson
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2018-11-09 12:13:15 PST
<
rdar://problem/45952201
>
Eric Carlson
Comment 2
2018-11-09 12:25:00 PST
Created
attachment 354371
[details]
Patch
youenn fablet
Comment 3
2018-11-09 13:18:46 PST
View in context:
https://bugs.webkit.org/attachment.cgi?id=354371&action=review
> Source/WebCore/platform/mediastream/RealtimeVideoSource.cpp:307 > + continue;
exactSizePreset seems to be set above and there is a continue just after it. Maybe we could just have a continue in case we set aspectRatioPreset 4 lines above?
> Source/WebCore/platform/mediastream/mac/AVVideoCaptureSource.mm:523 > m_buffer = &sample.get();
Do we need m_buffer/shutdownCaptureSession anymore?
WebKit Commit Bot
Comment 4
2018-11-09 13:26:23 PST
Comment on
attachment 354371
[details]
Patch Clearing flags on attachment: 354371 Committed
r238053
: <
https://trac.webkit.org/changeset/238053
>
WebKit Commit Bot
Comment 5
2018-11-09 13:26:25 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug