[MediaStream] AVVideoCaptureSource reports incorrect size when frames are scaled https://bugs.webkit.org/show_bug.cgi?id=191479 <rdar://problem/45952201>

Reviewed by Jer Noble.

No new tests, tested manually.

* platform/mediastream/RealtimeVideoSource.cpp:
(WebCore::RealtimeVideoSource::standardVideoSizes): Drive-by fix: add a few more standard
video frame sizes, correct a typo.
(WebCore::RealtimeVideoSource::bestSupportedSizeAndFrameRate): Drive-by fix: don't consider
rescaled sized when we already have an exact or aspect ratio match because it won't be used.

* platform/mediastream/mac/AVVideoCaptureSource.h:
(WebCore::AVVideoCaptureSource::width const): Deleted.
(WebCore::AVVideoCaptureSource::height const): Deleted.
* platform/mediastream/mac/AVVideoCaptureSource.mm:
(WebCore::AVVideoCaptureSource::setSizeAndFrameRateWithPreset): Delete m_requestedSize.
(WebCore::AVVideoCaptureSource::shutdownCaptureSession): Delete m_width and m_height.
(WebCore::AVVideoCaptureSource::processNewFrame): Don't call setSize with captured size,
the frame may be resized before deliver.


Canonical link: https://commits.webkit.org/206267@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@238053 268f45cc-cd09-0410-ab3c-d52691b4dbfc